# winpods

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/actions/ci/clippy/: action.yaml
.github/actions/ci/fmt/: action.yaml
.github/actions/ci/test/: action.yaml
.github/actions/setup-rust/: action.yaml
.github/actions/setup-tauri/: action.yaml
.github/workflows/: ci.yaml  release.yaml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.vue  constants.ts  index.css  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: pinia.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: events.rs  lib.rs  utils.rs  views.rs
apps/desktop/src-tauri/src/bluetooth/: mod.rs
apps/desktop/src-tauri/src/bluetooth_watcher/: mod.rs
apps/desktop/src-tauri/src/commands/: connect.rs  disconnect.rs  get_current_device.rs  get_device_list.rs  get_settings_state.rs  mod.rs
apps/desktop/src-tauri/src/device_manager/: device.rs  device_manager.rs  manager.rs  mod.rs  selected_device.rs
apps/desktop/src-tauri/src/models/: battery.rs  connected_device.rs  mod.rs
apps/desktop/src-tauri/src/settings/: auto_start.rs  ear_detection.rs  low_battery_notification.rs  mod.rs
apps/desktop/src-tauri/src/settings/listeners/: mod.rs  ui_listeners.rs
apps/desktop/src-tauri/src/tray/: mod.rs
apps/desktop/src-tauri/src/tray/handlers/: tooltip.rs  tray_icon_event.rs
apps/desktop/src-tauri/src/tray/menu/: dashboard.rs  mod.rs  settings.rs
apps/desktop/src-tauri/src/update/: mod.rs
apps/desktop/src-tauri/src/updater/: mod.rs
apps/desktop/src/components/: index.ts
apps/desktop/src/stores/: connected-device.ts  device-connection.ts  device-settings.ts  device.ts  settings.ts  updater.ts
apps/desktop/src/types/: index.ts
apps/releases-api/: package.json  worker-configuration.d.ts  wrangler.toml
apps/releases-api/src/: github_api.ts  index.ts  release.service.ts  utils.ts
apps/releases-api/test/: index.spec.ts  utils.spec.ts
apps/tray-app/: Cargo.toml
apps/tray-app/src/: main.rs
apps/website/: README.md  env.d.ts  index.html  package.json
apps/website/src/: App.vue  main.ts
apps/website/src/assets/: daisy.css  main.css
apps/website/src/components/: WPButton.vue  WPNav.vue  WPNotification.vue  WPNotifications.vue  WPThemeController.vue
apps/website/src/router/: index.ts
apps/website/src/service/: download.service.ts
apps/website/src/stores/: notification.store.ts
apps/website/src/views/: FAQView.vue  HomeView.vue
crates/bluetooth/: Cargo.toml
crates/bluetooth/src/: advertisement_received_data.rs  advertisement_watcher.rs  device.rs  error.rs  lib.rs  utils.rs
crates/bluetooth/src/adapter/: adapter_watcher.rs  enums.rs  mod.rs  utils.rs
crates/bluetooth/src/advertisement/: advertisement_received_data.rs  advertisement_watcher.rs  mod.rs
crates/bluetooth/src/apple_cp/: mod.rs  proximity_pairing.rs
crates/bluetooth/src/protocols/: apple_cp.rs  mod.rs
crates/desktop/: package.json  vite.config.ts
crates/desktop/src/: App.vue  constants.ts  main.ts  models.ts  utils.ts
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/capabilities/: default.json  desktop.json  widget.json
crates/device/: Cargo.toml
crates/device/src/: airpods.rs  device.rs  device_manager.rs  device_watcher.rs  lib.rs  utils.rs
crates/device/src/models/: mod.rs  (+2 more)
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/utils/src/: event_dispatcher.rs  lib.rs
(+63 files in other folders)
