[workspace]
resolver = "2"
members = [
    "crates/desktop/src-tauri",
    "crates/bluetooth",
    "crates/media",
    "crates/utils",
]

[workspace.dependencies]
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
windows = { version = "0.61.1", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Enumeration",
    "Devices_Radios",
    "Foundation",
    "UI_Notifications",
    "Storage_Streams",
    "ApplicationModel_Background",
    "Devices",
    "Foundation_Collections",
    "Media_Control",
] }
windows-collections = { version = "0.2" }
